# references-searcher

./: .gitignore  docker-compose.yaml  get_data.py  main.py  pretrain_dl.py  pyproject.toml  readme.md  train_dl.py
citations_searcher/: __init__.py  constants.py  logger.py  utils.py
citations_searcher/data/: __init__.py  arxiv_data.py  arxiv_dataset.py  get_arxiv_data.py  get_semantic_data.py
citations_searcher/data/sql/: database_interface.py  dataclasses.py
citations_searcher/data/tests/: test_arxiv_dataset.py
citations_searcher/metrics/: __init__.py  evaluate_predictions.py  metric_calculator.py
citations_searcher/models/: __init__.py  custom_catboost.py
citations_searcher/models/neural/: __init__.py  custom_bert.py  trainer.py
config/: config.yaml
config/model/: bert.yaml  catboost.yaml
descriptions/: postgres_tables.md
nginx/: default.conf
notebooks/: catboost baseline.ipynb  get_semantic_data.ipynb
references_searcher/: constants.py  exceptions.py  logger.py  utils.py
references_searcher/data/: __init__.py  arxiv_data.py  arxiv_dataset.py  inference_arxiv_dataset.py
references_searcher/metrics/: __init__.py  evaluate_predictions.py  metric_calculator.py  metrics_at_k.py
references_searcher/models/: __init__.py  basic_preprocessor.py  custom_catboost.py  inferencer.py  word2vec.py
references_searcher/pipelines/: __init__.py  base_pipeline.py  bert_pipeline.py  catboost_pipeline.py
scripts/: docker_entrypoint.sh  sql_queries.sql
web_app/: Dockerfile  gunicorn_config.py  manage.py
web_app/main/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web_app/reference_searcher_inference/: __init__.py  apps.py  forms.py  urls.py
web_app/references_searcher_inference/: __init__.py  apps.py  forms.py  tasks.py  urls.py  views.py
(+20 files in other folders)
